public class nvccFermi extends nvccCompilador{
    public nvccFermi(){
        super();
        System.out.println("Compilador nvccCompilador para Fermi");
    }
}
