public class nvccPascal extends nvccCompilador{
    public nvccPascal(){
        super();
        System.out.println("Compilador nvccCompilador para Pascal");
    }
}
