public class nvprofTesla extends nvprofProfiler{
    public nvprofTesla() {
        super();
        System.out.println("Profiler nvprofTesla para Tesla.");
    }
}
