public class nvvmFermi extends nvvmMonTool{
    public nvvmFermi() {
        super();
        System.out.println("Herramienta de monitoreo nvvmFermi para Fermi");
    }
}
