public class nvvmTesla extends nvvmMonTool{
    public nvvmTesla() {
        super();
        System.out.println("Herramienta de monitoreo nvvmTesla para Tesla");
    }
}
